Custom Buttons and Fonts

--- a/PuzzlePlatforms/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/PuzzlePlatforms/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1335,6 +1335,22 @@ HorizontalBox.Performance=True
 HorizontalBox.Clipping=True
 HorizontalBox.Navigation=True
 HorizontalBox.Localization=True
+ScaleBox.Layout=True
+ScaleBox.Stretching=True
+ScaleBox.Accessibility=True
+ScaleBox.Behavior=True
+ScaleBox.Render Transform=True
+ScaleBox.Performance=True
+ScaleBox.Clipping=True
+ScaleBox.Navigation=True
+ScaleBox.Localization=True
+ContentWidget.Accessibility=True
+ContentWidget.Behavior=True
+ContentWidget.Render Transform=True
+ContentWidget.Performance=True
+ContentWidget.Clipping=True
+ContentWidget.Navigation=True
+ContentWidget.Localization=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/PuzzlePlatforms/BP_PlatformTrigger.BP_PlatformTrigger;
@@ -1371,15 +1387,16 @@ Engine="\"Object.Timecode.DefaultTimecodeFrameRate\" "
 LevelEditor2DSettings="\"Object.LayerSnapping.SnapLayers\" \"Object.LayerSnapping.SnapLayers.SnapLayers[0]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[1]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[2]\" "
 EditorProjectAppearanceSettings="\"Object.Units.DistanceUnits\" "
 ImgMediaSettings="\"Object.General.DefaultFrameRate\" "
-TextBlock="\"Object.Appearance.Font\" "
-TextLayoutWidget="\"Object.Appearance.Font\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 Widget=
 Visual=
-Button=
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
 ContentWidget=
 PanelWidget=
 Font="\"Object.Font\" "
 VerticalBox=
+Image="\"Object.Appearance.Brush\" "
 
 [ContentBrowserRecent]
 MRUItem0=/Game/MenuSystem/WBP_MainMenu
