Interfaces to Invert Dependencies

--- a/PuzzlePlatforms/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/PuzzlePlatforms/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -148,7 +148,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/MenuSystem/MainMenu
 
 [ModuleFileTracking]
-PuzzlePlatforms.TimeStamp=2020.04.15-02.01.28
+PuzzlePlatforms.TimeStamp=2020.04.15-02.40.07
 PuzzlePlatforms.LastCompileMethod=Runtime
 PakFile.TimeStamp=2020.04.13-21.58.12
 PakFile.LastCompileMethod=Unknown
@@ -864,8 +864,7 @@ FontEditor.TimeStamp=2020.04.13-21.57.40
 FontEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/MenuSystem/WBP_MainMenu.WBP_MainMenu
+CleanShutdown=True
 
 [DetailCategories]
 MovingPlatform.TransformCommon=True
@@ -1430,7 +1429,7 @@ MRUItem6=/Game/PuzzlePlatforms/BP_PlatformTrigger
 bHideUnrelatedNodes=False
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=CompilerResultsLog
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1451,7 +1450,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/Github/Unreal_MenuSystem/PuzzlePlatforms/Content/ThirdPersonCPP/Maps
+UNR=E:/Github/Unreal_MenuSystem/PuzzlePlatforms/Content/MenuSystem
 BRUSH=E:/Github/Unreal_PuzzlePlatformer_Multiplayer/PuzzlePlatforms/Content/
 FBX=E:/Github/Unreal_PuzzlePlatformer_Multiplayer/PuzzlePlatforms/Content/
 FBXAnim=E:/Github/Unreal_PuzzlePlatformer_Multiplayer/PuzzlePlatforms/Content/
@@ -1467,6 +1466,7 @@ Project=C:/Program Files/Epic Games/UE_4.24/
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonCPP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
 /Game/MenuSystem/MainMenu.MainMenu:PersistentLevel.MainMenu=1
+/Game/MenuSystem/WBP_MainMenu.WBP_MainMenu=1
 
 [DetailCategoriesAdvanced]
 BP_PlatformTrigger_C.Tick=True
@@ -1605,5 +1605,19 @@ bCompileDirectorOnEvaluate=False
 TrajectoryPathCap=250
 bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bSCCUseGlobalSettings=False
+bAutomaticallyCheckoutOnAssetModification=False
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
 
 
