--- a/PuzzlePlatforms/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/PuzzlePlatforms/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -93,6 +93,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=-2132598752,Y=522)
 MultipleInstancePositions=(X=672,Y=0)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bAllowArcballRotate=False
@@ -148,8 +149,8 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/MenuSystem/MainMenu
 
 [ModuleFileTracking]
-PuzzlePlatforms.TimeStamp=2020.04.15-02.40.07
-PuzzlePlatforms.LastCompileMethod=Runtime
+PuzzlePlatforms.TimeStamp=2020.04.15-18.21.50
+PuzzlePlatforms.LastCompileMethod=External
 PakFile.TimeStamp=2020.04.13-21.58.12
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2020.04.13-21.58.25
@@ -864,7 +865,7 @@ FontEditor.TimeStamp=2020.04.13-21.57.40
 FontEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 MovingPlatform.TransformCommon=True
@@ -1417,8 +1418,8 @@ UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Foreground
 MainMenu="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.ForegroundColor\" \"Object.Render Transform.RenderTransform\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MenuSystem/WBP_MainMenu
-MRUItem1=/Game/MenuSystem/MainMenu
+MRUItem0=/Game/MenuSystem/MainMenu
+MRUItem1=/Game/MenuSystem/WBP_MainMenu
 MRUItem2=/Engine/EngineFonts/DroidSansMono
 MRUItem3=/Game/PuzzlePlatforms/Maps/Lobby
 MRUItem4=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
