--- a/PuzzlePlatforms/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/PuzzlePlatforms/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -149,8 +149,8 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/MenuSystem/MainMenu
 
 [ModuleFileTracking]
-PuzzlePlatforms.TimeStamp=2020.04.15-18.21.50
-PuzzlePlatforms.LastCompileMethod=External
+PuzzlePlatforms.TimeStamp=2020.04.15-21.15.40
+PuzzlePlatforms.LastCompileMethod=Runtime
 PakFile.TimeStamp=2020.04.13-21.58.12
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2020.04.13-21.58.25
@@ -1370,7 +1370,7 @@ WidgetBlueprint.BlueprintOptions=True
 WidgetBlueprint.Packaging=True
 WidgetSwitcher.Layout=True
 WidgetSwitcher.Switcher=True
-WidgetSwitcher.Accessibility=True
+WidgetSwitcher.Accessibility=False
 WidgetSwitcher.Behavior=True
 WidgetSwitcher.Render Transform=True
 WidgetSwitcher.Performance=True
@@ -1439,7 +1439,7 @@ TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Ob
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Font="\"Object.Font\" "
@@ -1455,8 +1455,8 @@ EditableTextBox="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetSty
 Overlay="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MenuSystem/WBP_MainMenu
-MRUItem1=/Game/MenuSystem/MainMenu
+MRUItem0=/Game/MenuSystem/MainMenu
+MRUItem1=/Game/MenuSystem/WBP_MainMenu
 MRUItem2=/Engine/EngineFonts/DroidSansMono
 MRUItem3=/Game/PuzzlePlatforms/Maps/Lobby
 MRUItem4=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
@@ -1467,7 +1467,7 @@ MRUItem6=/Game/PuzzlePlatforms/BP_PlatformTrigger
 bHideUnrelatedNodes=False
 
 [MessageLog]
-LastLogListing=CompilerResultsLog
+LastLogListing=BlueprintLog
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
