--- a/PuzzlePlatforms/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/PuzzlePlatforms/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -123,7 +123,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/MenuSystem
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -149,8 +149,8 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/MenuSystem/MainMenu
 
 [ModuleFileTracking]
-PuzzlePlatforms.TimeStamp=2020.04.15-23.10.22
-PuzzlePlatforms.LastCompileMethod=Runtime
+PuzzlePlatforms.TimeStamp=2020.04.16-00.48.55
+PuzzlePlatforms.LastCompileMethod=External
 PakFile.TimeStamp=2020.04.13-21.58.12
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2020.04.13-21.58.25
@@ -863,11 +863,12 @@ SequencerWidgets.TimeStamp=2020.04.13-21.58.30
 SequencerWidgets.LastCompileMethod=Unknown
 FontEditor.TimeStamp=2020.04.13-21.57.40
 FontEditor.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2020.04.13-21.57.39
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/MenuSystem/WBP_MainMenu.WBP_MainMenu
-OpenAssetsAtExit=/Game/MenuSystem/WBP_InGameMenu.WBP_InGameMenu
 
 [DetailCategories]
 MovingPlatform.TransformCommon=True
@@ -1495,7 +1496,7 @@ bHideUnrelatedNodes=False
 LastLogListing=BlueprintLog
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
+ScreenPosition=X=264.000 Y=111.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1513,7 +1514,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/Github/Unreal_MenuSystem/PuzzlePlatforms/Content/ThirdPersonCPP/Maps
+UNR=E:/Github/Unreal_MenuSystem/PuzzlePlatforms/Content/MenuSystem
 BRUSH=E:/Github/Unreal_PuzzlePlatformer_Multiplayer/PuzzlePlatforms/Content/
 FBX=E:/Github/Unreal_PuzzlePlatformer_Multiplayer/PuzzlePlatforms/Content/
 FBXAnim=E:/Github/Unreal_PuzzlePlatformer_Multiplayer/PuzzlePlatforms/Content/
