--- a/PuzzlePlatforms/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/PuzzlePlatforms/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -123,7 +123,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/MenuSystem
+ContentBrowserTab1.SelectedPaths=/Classes_Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -149,8 +149,8 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/MenuSystem/MainMenu
 
 [ModuleFileTracking]
-PuzzlePlatforms.TimeStamp=2020.04.16-03.22.14
-PuzzlePlatforms.LastCompileMethod=External
+PuzzlePlatforms.TimeStamp=2020.04.16-03.37.40
+PuzzlePlatforms.LastCompileMethod=Runtime
 PakFile.TimeStamp=2020.04.13-21.58.12
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2020.04.13-21.58.25
@@ -867,8 +867,7 @@ ExternalImagePicker.TimeStamp=2020.04.13-21.57.39
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/MenuSystem/WBP_MainMenu.WBP_MainMenu
+CleanShutdown=True
 
 [DetailCategories]
 MovingPlatform.TransformCommon=True
