Subsystem for Testing

--- a/PuzzlePlatforms/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/PuzzlePlatforms/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -867,7 +867,8 @@ ExternalImagePicker.TimeStamp=2020.04.13-21.57.39
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/MenuSystem/MainMenu.MainMenu:PersistentLevel.MainMenu
 
 [DetailCategories]
 MovingPlatform.TransformCommon=True
@@ -1513,7 +1514,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/Github/Unreal_MenuSystem/PuzzlePlatforms/Content/MenuSystem
+UNR=E:/Github/Unreal_PuzzlePlatformer_Multiplayer/PuzzlePlatforms/Content/MenuSystem
 BRUSH=E:/Github/Unreal_PuzzlePlatformer_Multiplayer/PuzzlePlatforms/Content/
 FBX=E:/Github/Unreal_PuzzlePlatformer_Multiplayer/PuzzlePlatforms/Content/
 FBXAnim=E:/Github/Unreal_PuzzlePlatformer_Multiplayer/PuzzlePlatforms/Content/
