--- a/PuzzlePlatforms/Config/DefaultEngine.ini
+++ b/PuzzlePlatforms/Config/DefaultEngine.ini
@@ -18,3 +18,6 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[OnlineSubsystem]
+DefaultPlatformService=NULL
