--- a/PuzzlePlatforms/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/PuzzlePlatforms/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -874,7 +874,7 @@ SteamShared.TimeStamp=2020.04.13-22.38.17
 SteamShared.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 MovingPlatform.TransformCommon=True
